# bsc-thesis

./: .clang-format  CMakeLists.txt  LICENSE  NOTICE  README.md  valgrind-out.txt
benchmark-results/: graph_generator.py
benchmark-results/dataset-100k/: delete_33percent.csv  delete_67percent.csv  delete_all.csv  delete_batch_100k.csv  import_100k.csv  range_select_100k.csv  select_batch_100k.csv  update_50percent_100k.csv
benchmark-results/dataset-10k/: delete_33percent.csv  delete_67percent.csv  delete_all.csv  delete_batch_10k.csv  import_10k.csv  range_select_10k.csv  select_batch_10k.csv  update_50percent_10k.csv
cmake/: run_valgrind_static.cmake
src/: main.cpp
src/CLI-driver/: CMakeLists.txt  public-api.hpp
src/CLI-driver/src/: runcli.cpp
src/DBEngine/: engine.cpp  engine.h  engine.hpp
src/DBEngine/execution_context/: CMakeLists.txt  public_api.hpp
src/DBEngine/execution_context/src/: constructor.cpp  destructor.cpp  erasers.cpp  getters.cpp  init.cpp  initializers.cpp  setters.cpp
src/DBEngine/filehandler/: CMakeLists.txt  public_api.hpp
src/DBEngine/filehandler/compactor/: compact.cpp  copy-record.cpp  ratio-calc.cpp
src/DBEngine/filehandler/deserialization/: extract-pks.cpp  record-type.cpp  record.cpp
src/DBEngine/filehandler/handlers/: create_untyped.cpp  csv-import.cpp  delete.cpp  drop.cpp  handler-utils.cpp  insert.cpp  select.cpp  update.cpp
src/DBEngine/filehandler/serialization/: create-new-tablefile.cpp  normalized-record.cpp  serialize-record.cpp
src/DBEngine/services/condition-evaluator/: CMakeLists.txt  public-api.hpp
src/DBEngine/services/condition-evaluator/src/: classify.cpp  evaluate.cpp  isnumeric.cpp  like-match.cpp
src/DBEngine/services/logger/: CMakeLists.txt  public_api.hpp
src/DBEngine/services/logger/error_logger/: error_logger.cpp
src/DBEngine/services/logger/std_logger/: error_logger.cpp  logger.cpp  status_logger.cpp  warning-logger.cpp
src/DBEngine/services/logger/std_logger/message-templates/: context-injector.cpp  error-template-resolver.cpp  fatal-error-template-resolver.cpp  public-api.hpp
src/DBEngine/services/logger/std_logger/message-templates/resolvers/: error-template-resolver.cpp  fatal-error-template-resolver.cpp  warning-template-resolver.cpp
src/DBEngine/services/semantic_normalizer/: CMakeLists.txt  public-api.hpp
src/DBEngine/services/semantic_normalizer/src/: delete.cpp  insert.cpp  select.cpp  update.cpp  where.cpp
src/DBEngine/services/semantic_validator/: CMakeLists.txt  public_api.hpp
src/DBEngine/services/semantic_validator/validators/: delete.cpp  describe.cpp  drop.cpp  insert.cpp  insert_validator.cpp  select.cpp  select_validator.cpp  table-exists.cpp  update.cpp  where.cpp
src/DBEngine/services/strategy-decider/: CMakeLists.txt  public-api.hpp
src/DBEngine/services/strategy-decider/src/: unique-equality-lookup.cpp
src/auxiliary/: CMakeLists.txt  utils_public_api.hpp
src/auxiliary/types/: status-codes.hpp  types.hpp
src/auxiliary/utils/: column_utils.cpp  insert_utils.cpp  string_utils.cpp
src/interpreter/: execution_context.hpp  interpreter_visitor.hpp  utils.hpp  validators.hpp
src/parser/: ast.cpp  ast.hpp  lexer.l  parser.cpp  parser.h  parser.y
src/schema/metadata/birds/: metadata.txt
src/schema/metadata/birds_two/: metadata.txt
src/schema/metadata/comments/: metadata.txt
src/schema/metadata/dolls/: metadata.txt
src/schema/metadata/letters/: metadata.txt
src/schema/metadata/temperature/: metadata.txt
src/schema/metadata/users/: metadata.txt
src/schema/metadata/workers/: metadata.txt
suppressions/: readline.supp
tests/: CMakeLists.txt  test_parser.cpp
